meta2/y.output
Terminals unused in grammar

    RESERVED


Grammar

    0 $accept: program $end

    1 program: FunctionsAndDeclarations

    2 FunctionsAndDeclarations: FunctionDefinition
    3                         | FunctionDeclaration
    4                         | Declaration
    5                         | FunctionsAndDeclarations FunctionDefinition
    6                         | FunctionsAndDeclarations FunctionDeclaration
    7                         | FunctionsAndDeclarations Declaration

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody

    9 FunctionBody: LBRACE DeclarationsAndStatements RBRACE
   10             | LBRACE RBRACE

   11 DeclarationsAndStatements: DeclarationsAndStatements Statement
   12                          | DeclarationsAndStatements Declaration
   13                          | Statement
   14                          | Declaration

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI

   16 FunctionDeclarator: IDENTIFIER LPAR ParameterList RPAR

   17 ParameterList: ParameterDeclaration
   18              | ParameterList COMMA ParameterDeclaration

   19 ParameterDeclaration: TypeSpec IDENTIFIER
   20                     | TypeSpec

   21 Declaration: error SEMI
   22            | TypeSpec Declarations SEMI

   23 Declarations: Declarator
   24             | Declarations COMMA Declarator

   25 TypeSpec: CHAR
   26         | INT
   27         | VOID
   28         | SHORT
   29         | DOUBLE

   30 Declarator: IDENTIFIER
   31           | IDENTIFIER ASSIGN Expr

   32 Statement: LBRACE error RBRACE
   33          | SEMI
   34          | Expr SEMI
   35          | LBRACE RBRACE
   36          | LBRACE Statements RBRACE
   37          | IF LPAR Expr RPAR StatementError
   38          | IF LPAR Expr RPAR StatementError ELSE StatementError
   39          | WHILE LPAR Expr RPAR StatementError
   40          | RETURN SEMI
   41          | RETURN Expr SEMI

   42 StatementError: error SEMI
   43               | Statement

   44 Statements: StatementError
   45           | Statements StatementError

   46 Expr: IDENTIFIER LPAR error RPAR
   47     | LPAR error RPAR
   48     | IDENTIFIER
   49     | NATURAL
   50     | CHRLIT
   51     | DECIMAL
   52     | LPAR Expr RPAR
   53     | Expr ASSIGN Expr
   54     | Expr COMMA Expr
   55     | Expr PLUS Expr
   56     | Expr MINUS Expr
   57     | Expr MUL Expr
   58     | Expr DIV Expr
   59     | Expr MOD Expr
   60     | Expr OR Expr
   61     | Expr AND Expr
   62     | Expr BITWISEOR Expr
   63     | Expr BITWISEXOR Expr
   64     | Expr BITWISEAND Expr
   65     | Expr EQ Expr
   66     | Expr NE Expr
   67     | Expr LE Expr
   68     | Expr GE Expr
   69     | Expr LT Expr
   70     | Expr GT Expr
   71     | MINUS Expr
   72     | PLUS Expr
   73     | NOT Expr
   74     | IDENTIFIER LPAR RPAR
   75     | IDENTIFIER LPAR ExprList RPAR

   76 ExprList: COMMA Expr
   77         | ExprList COMMA Expr


Terminals, with rules where they appear

    $end (0) 0
    error (256) 21 32 42 46 47
    CHAR (258) 25
    DOUBLE (259) 29
    INT (260) 26
    SHORT (261) 28
    ELSE (262) 38
    WHILE (263) 39
    IF (264) 37 38
    RETURN (265) 40 41
    VOID (266) 27
    BITWISEAND (267) 64
    BITWISEOR (268) 62
    BITWISEXOR (269) 63
    AND (270) 61
    ASSIGN (271) 31 53
    MUL (272) 57
    COMMA (273) 18 24 54 76 77
    DIV (274) 58
    EQ (275) 65
    GE (276) 68
    GT (277) 70
    LBRACE (278) 9 10 32 35 36
    LE (279) 67
    LPAR (280) 16 37 38 39 46 47 52 74 75
    LT (281) 69
    MINUS (282) 56 71
    MOD (283) 59
    NE (284) 66
    NOT (285) 73
    OR (286) 60
    PLUS (287) 55 72
    RBRACE (288) 9 10 32 35 36
    RPAR (289) 16 37 38 39 46 47 52 74 75
    SEMI (290) 15 21 22 33 34 40 41 42
    IDENTIFIER <token> (291) 16 19 30 31 46 48 74 75
    NATURAL <token> (292) 49
    DECIMAL <token> (293) 51
    CHRLIT <token> (294) 50
    RESERVED <token> (295)


Nonterminals, with rules where they appear

    $accept (41)
        on left: 0
    program <node> (42)
        on left: 1
        on right: 0
    FunctionsAndDeclarations <node> (43)
        on left: 2 3 4 5 6 7
        on right: 1 5 6 7
    FunctionDefinition <node> (44)
        on left: 8
        on right: 2 5
    FunctionBody <node> (45)
        on left: 9 10
        on right: 8
    DeclarationsAndStatements <node> (46)
        on left: 11 12 13 14
        on right: 9 11 12
    FunctionDeclaration <node> (47)
        on left: 15
        on right: 3 6
    FunctionDeclarator <node> (48)
        on left: 16
        on right: 8 15
    ParameterList <node> (49)
        on left: 17 18
        on right: 16 18
    ParameterDeclaration <node> (50)
        on left: 19 20
        on right: 17 18
    Declaration <node> (51)
        on left: 21 22
        on right: 4 7 12 14
    Declarations <node> (52)
        on left: 23 24
        on right: 22 24
    TypeSpec <node> (53)
        on left: 25 26 27 28 29
        on right: 8 15 19 20 22
    Declarator <node> (54)
        on left: 30 31
        on right: 23 24
    Statement <node> (55)
        on left: 32 33 34 35 36 37 38 39 40 41
        on right: 11 13 43
    StatementError (56)
        on left: 42 43
        on right: 37 38 39 44 45
    Statements <node> (57)
        on left: 44 45
        on right: 36 45
    Expr <node> (58)
        on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75
        on right: 31 34 37 38 39 41 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 76 77
    ExprList <node> (59)
        on left: 76 77
        on right: 75 77


State 0

    0 $accept: • program $end
    1 program: • FunctionsAndDeclarations
    2 FunctionsAndDeclarations: • FunctionDefinition
    3                         | • FunctionDeclaration
    4                         | • Declaration
    5                         | • FunctionsAndDeclarations FunctionDefinition
    6                         | • FunctionsAndDeclarations FunctionDeclaration
    7                         | • FunctionsAndDeclarations Declaration
    8 FunctionDefinition: • TypeSpec FunctionDeclarator FunctionBody
   15 FunctionDeclaration: • TypeSpec FunctionDeclarator SEMI
   21 Declaration: • error SEMI
   22            | • TypeSpec Declarations SEMI
   25 TypeSpec: • CHAR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    DOUBLE  shift, and go to state 3
    INT     shift, and go to state 4
    SHORT   shift, and go to state 5
    VOID    shift, and go to state 6

    program                   go to state 7
    FunctionsAndDeclarations  go to state 8
    FunctionDefinition        go to state 9
    FunctionDeclaration       go to state 10
    Declaration               go to state 11
    TypeSpec                  go to state 12


State 1

   21 Declaration: error • SEMI

    SEMI  shift, and go to state 13


State 2

   25 TypeSpec: CHAR •

    $default  reduce using rule 25 (TypeSpec)


State 3

   29 TypeSpec: DOUBLE •

    $default  reduce using rule 29 (TypeSpec)


State 4

   26 TypeSpec: INT •

    $default  reduce using rule 26 (TypeSpec)


State 5

   28 TypeSpec: SHORT •

    $default  reduce using rule 28 (TypeSpec)


State 6

   27 TypeSpec: VOID •

    $default  reduce using rule 27 (TypeSpec)


State 7

    0 $accept: program • $end

    $end  shift, and go to state 14


State 8

    1 program: FunctionsAndDeclarations •  [$end]
    5 FunctionsAndDeclarations: FunctionsAndDeclarations • FunctionDefinition
    6                         | FunctionsAndDeclarations • FunctionDeclaration
    7                         | FunctionsAndDeclarations • Declaration
    8 FunctionDefinition: • TypeSpec FunctionDeclarator FunctionBody
   15 FunctionDeclaration: • TypeSpec FunctionDeclarator SEMI
   21 Declaration: • error SEMI
   22            | • TypeSpec Declarations SEMI
   25 TypeSpec: • CHAR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE

    error   shift, and go to state 1
    CHAR    shift, and go to state 2
    DOUBLE  shift, and go to state 3
    INT     shift, and go to state 4
    SHORT   shift, and go to state 5
    VOID    shift, and go to state 6

    $end  reduce using rule 1 (program)

    FunctionDefinition   go to state 15
    FunctionDeclaration  go to state 16
    Declaration          go to state 17
    TypeSpec             go to state 12


State 9

    2 FunctionsAndDeclarations: FunctionDefinition •

    $default  reduce using rule 2 (FunctionsAndDeclarations)


State 10

    3 FunctionsAndDeclarations: FunctionDeclaration •

    $default  reduce using rule 3 (FunctionsAndDeclarations)


State 11

    4 FunctionsAndDeclarations: Declaration •

    $default  reduce using rule 4 (FunctionsAndDeclarations)


State 12

    8 FunctionDefinition: TypeSpec • FunctionDeclarator FunctionBody
   15 FunctionDeclaration: TypeSpec • FunctionDeclarator SEMI
   16 FunctionDeclarator: • IDENTIFIER LPAR ParameterList RPAR
   22 Declaration: TypeSpec • Declarations SEMI
   23 Declarations: • Declarator
   24             | • Declarations COMMA Declarator
   30 Declarator: • IDENTIFIER
   31           | • IDENTIFIER ASSIGN Expr

    IDENTIFIER  shift, and go to state 18

    FunctionDeclarator  go to state 19
    Declarations        go to state 20
    Declarator          go to state 21


State 13

   21 Declaration: error SEMI •

    $default  reduce using rule 21 (Declaration)


State 14

    0 $accept: program $end •

    $default  accept


State 15

    5 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDefinition •

    $default  reduce using rule 5 (FunctionsAndDeclarations)


State 16

    6 FunctionsAndDeclarations: FunctionsAndDeclarations FunctionDeclaration •

    $default  reduce using rule 6 (FunctionsAndDeclarations)


State 17

    7 FunctionsAndDeclarations: FunctionsAndDeclarations Declaration •

    $default  reduce using rule 7 (FunctionsAndDeclarations)


State 18

   16 FunctionDeclarator: IDENTIFIER • LPAR ParameterList RPAR
   30 Declarator: IDENTIFIER •  [COMMA, SEMI]
   31           | IDENTIFIER • ASSIGN Expr

    ASSIGN  shift, and go to state 22
    LPAR    shift, and go to state 23

    $default  reduce using rule 30 (Declarator)


State 19

    8 FunctionDefinition: TypeSpec FunctionDeclarator • FunctionBody
    9 FunctionBody: • LBRACE DeclarationsAndStatements RBRACE
   10             | • LBRACE RBRACE
   15 FunctionDeclaration: TypeSpec FunctionDeclarator • SEMI

    LBRACE  shift, and go to state 24
    SEMI    shift, and go to state 25

    FunctionBody  go to state 26


State 20

   22 Declaration: TypeSpec Declarations • SEMI
   24 Declarations: Declarations • COMMA Declarator

    COMMA  shift, and go to state 27
    SEMI   shift, and go to state 28


State 21

   23 Declarations: Declarator •

    $default  reduce using rule 23 (Declarations)


State 22

   31 Declarator: IDENTIFIER ASSIGN • Expr
   46 Expr: • IDENTIFIER LPAR error RPAR
   47     | • LPAR error RPAR
   48     | • IDENTIFIER
   49     | • NATURAL
   50     | • CHRLIT
   51     | • DECIMAL
   52     | • LPAR Expr RPAR
   53     | • Expr ASSIGN Expr
   54     | • Expr COMMA Expr
   55     | • Expr PLUS Expr
   56     | • Expr MINUS Expr
   57     | • Expr MUL Expr
   58     | • Expr DIV Expr
   59     | • Expr MOD Expr
   60     | • Expr OR Expr
   61     | • Expr AND Expr
   62     | • Expr BITWISEOR Expr
   63     | • Expr BITWISEXOR Expr
   64     | • Expr BITWISEAND Expr
   65     | • Expr EQ Expr
   66     | • Expr NE Expr
   67     | • Expr LE Expr
   68     | • Expr GE Expr
   69     | • Expr LT Expr
   70     | • Expr GT Expr
   71     | • MINUS Expr
   72     | • PLUS Expr
   73     | • NOT Expr
   74     | • IDENTIFIER LPAR RPAR
   75     | • IDENTIFIER LPAR ExprList RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    Expr  go to state 37


State 23

   16 FunctionDeclarator: IDENTIFIER LPAR • ParameterList RPAR
   17 ParameterList: • ParameterDeclaration
   18              | • ParameterList COMMA ParameterDeclaration
   19 ParameterDeclaration: • TypeSpec IDENTIFIER
   20                     | • TypeSpec
   25 TypeSpec: • CHAR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE

    CHAR    shift, and go to state 2
    DOUBLE  shift, and go to state 3
    INT     shift, and go to state 4
    SHORT   shift, and go to state 5
    VOID    shift, and go to state 6

    ParameterList         go to state 38
    ParameterDeclaration  go to state 39
    TypeSpec              go to state 40


State 24

    9 FunctionBody: LBRACE • DeclarationsAndStatements RBRACE
   10             | LBRACE • RBRACE
   11 DeclarationsAndStatements: • DeclarationsAndStatements Statement
   12                          | • DeclarationsAndStatements Declaration
   13                          | • Statement
   14                          | • Declaration
   21 Declaration: • error SEMI
   22            | • TypeSpec Declarations SEMI
   25 TypeSpec: • CHAR
   26         | • INT
   27         | • VOID
   28         | • SHORT
   29         | • DOUBLE
   32 Statement: • LBRACE error RBRACE
   33          | • SEMI
   34          | • Expr SEMI
   35          | • LBRACE RBRACE
   36          | • LBRACE Statements RBRACE
   37          | • IF LPAR Expr RPAR StatementError
   38          | • IF LPAR Expr RPAR StatementError ELSE StatementError
   39          | • WHILE LPAR Expr RPAR StatementError
   40          | • RETURN SEMI
   41          | • RETURN Expr SEMI
   46 Expr: • IDENTIFIER LPAR error RPAR
   47     | • LPAR error RPAR
   48     | • IDENTIFIER
   49     | • NATURAL
   50     | • CHRLIT
   51     | • DECIMAL
   52     | • LPAR Expr RPAR
   53     | • Expr ASSIGN Expr
   54     | • Expr COMMA Expr
   55     | • Expr PLUS Expr
   56     | • Expr MINUS Expr
   57     | • Expr MUL Expr
   58     | • Expr DIV Expr
   59     | • Expr MOD Expr
   60     | • Expr OR Expr
   61     | • Expr AND Expr
   62     | • Expr BITWISEOR Expr
   63     | • Expr BITWISEXOR Expr
   64     | • Expr BITWISEAND Expr
   65     | • Expr EQ Expr
   66     | • Expr NE Expr
   67     | • Expr LE Expr
   68     | • Expr GE Expr
   69     | • Expr LT Expr
   70     | • Expr GT Expr
   71     | • MINUS Expr
   72     | • PLUS Expr
   73     | • NOT Expr
   74     | • IDENTIFIER LPAR RPAR
   75     | • IDENTIFIER LPAR ExprList RPAR

    error       shift, and go to state 1
    CHAR        shift, and go to state 2
    DOUBLE      shift, and go to state 3
    INT         shift, and go to state 4
    SHORT       shift, and go to state 5
    WHILE       shift, and go to state 41
    IF          shift, and go to state 42
    RETURN      shift, and go to state 43
    VOID        shift, and go to state 6
    LBRACE      shift, and go to state 44
    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    RBRACE      shift, and go to state 45
    SEMI        shift, and go to state 46
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    DeclarationsAndStatements  go to state 47
    Declaration                go to state 48
    TypeSpec                   go to state 49
    Statement                  go to state 50
    Expr                       go to state 51


State 25

   15 FunctionDeclaration: TypeSpec FunctionDeclarator SEMI •

    $default  reduce using rule 15 (FunctionDeclaration)


State 26

    8 FunctionDefinition: TypeSpec FunctionDeclarator FunctionBody •

    $default  reduce using rule 8 (FunctionDefinition)


State 27

   24 Declarations: Declarations COMMA • Declarator
   30 Declarator: • IDENTIFIER
   31           | • IDENTIFIER ASSIGN Expr

    IDENTIFIER  shift, and go to state 52

    Declarator  go to state 53


State 28

   22 Declaration: TypeSpec Declarations SEMI •

    $default  reduce using rule 22 (Declaration)


State 29

   46 Expr: • IDENTIFIER LPAR error RPAR
   47     | • LPAR error RPAR
   47     | LPAR • error RPAR
   48     | • IDENTIFIER
   49     | • NATURAL
   50     | • CHRLIT
   51     | • DECIMAL
   52     | • LPAR Expr RPAR
   52     | LPAR • Expr RPAR
   53     | • Expr ASSIGN Expr
   54     | • Expr COMMA Expr
   55     | • Expr PLUS Expr
   56     | • Expr MINUS Expr
   57     | • Expr MUL Expr
   58     | • Expr DIV Expr
   59     | • Expr MOD Expr
   60     | • Expr OR Expr
   61     | • Expr AND Expr
   62     | • Expr BITWISEOR Expr
   63     | • Expr BITWISEXOR Expr
   64     | • Expr BITWISEAND Expr
   65     | • Expr EQ Expr
   66     | • Expr NE Expr
   67     | • Expr LE Expr
   68     | • Expr GE Expr
   69     | • Expr LT Expr
   70     | • Expr GT Expr
   71     | • MINUS Expr
   72     | • PLUS Expr
   73     | • NOT Expr
   74     | • IDENTIFIER LPAR RPAR
   75     | • IDENTIFIER LPAR ExprList RPAR

    error       shift, and go to state 54
    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    Expr  go to state 55


State 30

   46 Expr: • IDENTIFIER LPAR error RPAR
   47     | • LPAR error RPAR
   48     | • IDENTIFIER
   49     | • NATURAL
   50     | • CHRLIT
   51     | • DECIMAL
   52     | • LPAR Expr RPAR
   53     | • Expr ASSIGN Expr
   54     | • Expr COMMA Expr
   55     | • Expr PLUS Expr
   56     | • Expr MINUS Expr
   57     | • Expr MUL Expr
   58     | • Expr DIV Expr
   59     | • Expr MOD Expr
   60     | • Expr OR Expr
   61     | • Expr AND Expr
   62     | • Expr BITWISEOR Expr
   63     | • Expr BITWISEXOR Expr
   64     | • Expr BITWISEAND Expr
   65     | • Expr EQ Expr
   66     | • Expr NE Expr
   67     | • Expr LE Expr
   68     | • Expr GE Expr
   69     | • Expr LT Expr
   70     | • Expr GT Expr
   71     | • MINUS Expr
   71     | MINUS • Expr
   72     | • PLUS Expr
   73     | • NOT Expr
   74     | • IDENTIFIER LPAR RPAR
   75     | • IDENTIFIER LPAR ExprList RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    Expr  go to state 56


State 31

   46 Expr: • IDENTIFIER LPAR error RPAR
   47     | • LPAR error RPAR
   48     | • IDENTIFIER
   49     | • NATURAL
   50     | • CHRLIT
   51     | • DECIMAL
   52     | • LPAR Expr RPAR
   53     | • Expr ASSIGN Expr
   54     | • Expr COMMA Expr
   55     | • Expr PLUS Expr
   56     | • Expr MINUS Expr
   57     | • Expr MUL Expr
   58     | • Expr DIV Expr
   59     | • Expr MOD Expr
   60     | • Expr OR Expr
   61     | • Expr AND Expr
   62     | • Expr BITWISEOR Expr
   63     | • Expr BITWISEXOR Expr
   64     | • Expr BITWISEAND Expr
   65     | • Expr EQ Expr
   66     | • Expr NE Expr
   67     | • Expr LE Expr
   68     | • Expr GE Expr
   69     | • Expr LT Expr
   70     | • Expr GT Expr
   71     | • MINUS Expr
   72     | • PLUS Expr
   73     | • NOT Expr
   73     | NOT • Expr
   74     | • IDENTIFIER LPAR RPAR
   75     | • IDENTIFIER LPAR ExprList RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    Expr  go to state 57


State 32

   46 Expr: • IDENTIFIER LPAR error RPAR
   47     | • LPAR error RPAR
   48     | • IDENTIFIER
   49     | • NATURAL
   50     | • CHRLIT
   51     | • DECIMAL
   52     | • LPAR Expr RPAR
   53     | • Expr ASSIGN Expr
   54     | • Expr COMMA Expr
   55     | • Expr PLUS Expr
   56     | • Expr MINUS Expr
   57     | • Expr MUL Expr
   58     | • Expr DIV Expr
   59     | • Expr MOD Expr
   60     | • Expr OR Expr
   61     | • Expr AND Expr
   62     | • Expr BITWISEOR Expr
   63     | • Expr BITWISEXOR Expr
   64     | • Expr BITWISEAND Expr
   65     | • Expr EQ Expr
   66     | • Expr NE Expr
   67     | • Expr LE Expr
   68     | • Expr GE Expr
   69     | • Expr LT Expr
   70     | • Expr GT Expr
   71     | • MINUS Expr
   72     | • PLUS Expr
   72     | PLUS • Expr
   73     | • NOT Expr
   74     | • IDENTIFIER LPAR RPAR
   75     | • IDENTIFIER LPAR ExprList RPAR

    LPAR        shift, and go to state 29
    MINUS       shift, and go to state 30
    NOT         shift, and go to state 31
    PLUS        shift, and go to state 32
    IDENTIFIER  shift, and go to state 33
    NATURAL     shift, and go to state 34
    DECIMAL     shift, and go to state 35
    CHRLIT      shift, and go to state 36

    Expr  go to state 58


State 33

   46 Expr: IDENTIFIER • LPAR error RPAR
   48     | IDENTIFIER •  [BITWISEAND, BITWISEOR, BITWISEXOR, AND, ASSIGN, MUL, COMMA, DIV, EQ, GE, GT, LE, LT, MINUS, MOD, NE, OR, PLUS, RPAR, SEMI]
   74     | IDENTIFIER • LPAR RPAR
   75     | IDENTIFIER • LPAR ExprList RPAR

    LPAR  shift, and go to state 59

    $default  reduce using rule 48 (Expr)


State 34

   49 Expr: NATURAL •

    $default  reduce using rule 49 (Expr)


State 35

   51 Expr: DECIMAL •

    $default  reduce using rule 51 (Expr)


State 36

   50 Expr: CHRLIT •

    $default  reduce using rule 50 (Expr)


State 37

   31 Declarator: IDENTIFIER ASSIGN Expr •  [COMMA, SEMI]
   53 Expr: Expr • ASSIGN Expr
   54     | Expr • COMMA Expr
   55     | Expr • PLUS Expr
   56     | Expr • MINUS Expr
   57     | Expr • MUL Expr
   58     | Expr • DIV Expr
   59     | Expr • MOD Expr
   60     | Expr • OR Expr
   61     | Expr • AND Expr
   62     | Expr • BITWISEOR Expr
   63     | Expr • BITWISEXOR Expr
   64     | Expr • BITWISEAND Expr
   65     | Expr • EQ Expr
   66     | Expr • NE Expr
   67     | Expr • LE Expr
   68     | Expr • GE Expr
   69     | Expr • LT Expr
   70     | Expr • GT Expr

    BITWISEAND  shift, and go to state 60
    BITWISEOR   shift, and go to state 61
    BITWISEXOR  shift, and go to state 62
    AND         shift, and go to state 63
    ASSIGN      shift, and go to state 64
    MUL         shift, and go to state 65
    DIV         shift, and go to state 67
    EQ          shift, and go to state 68
    GE          shift, and go to state 69
    GT          shift, and go to state 70
    LE          shift, and go to state 71
    LT          shift, and go to state 72
    MINUS       shift, and go to state 73
    MOD         shift, and go to state 74
    NE          shift, and go to state 75
    OR          shift, and go to state 76
    PLUS        shift, and go to state 77

    $default  reduce using rule 31 (Declarator)

    Conflict between rule 31 and token COMMA resolved as reduce (COMMA < ASSIGN).


State 38

   16 FunctionDeclarator: IDENTIFIER LPAR ParameterList • RPAR
   18 ParameterList: ParameterList • COMMA ParameterDeclaration

    COMMA  shift, and go to state 78
    RPAR   shift, and go to state 79


State 39

   17 ParameterList: ParameterDeclaration •

    $default  reduce using rule 17 (ParameterList)


State 40

   19 ParameterDeclaration: TypeSpec • IDENTIFIER
   20                     | TypeSpec •  [COMMA, RPAR]

    IDENTIFIER  shift, and go to state 80
